--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,20 +16,7 @@ opt-level = 3
 # lto = false
 
 [patch.crates-io]
-# If you need to temporarily test Servo with a local fork of some upstream
-# crate, add that here. Use the form:
-#
-#     <crate> = { path = "/path/to/local/checkout" }
-#
-# Or for a git dependency:
-#
-#     [patch."https://github.com/servo/<repository>"]
-#     <crate> = { path = "/path/to/local/checkout" }
-
-# This is here to dedupe winapi since mio 0.6 is still using winapi 0.2.
-mio = { git = "https://github.com/servo/mio.git", branch = "servo-mio-0.6.22" }
-# Work around bug in winit 0.24 crashing servo headless in macOS
-winit = { git = "https://github.com/rust-windowing/winit.git", rev = "4192d04a53202c199f94d1b7d883a34c9ad09272" }
+surfman = { git = "https://github.com/Snowiiii/surfman.git", branch = "master" }
 
 [patch."https://github.com/jrmuizel/raqote"]
 raqote = { git = "https://github.com/jdm/raqote", branch = "fkup" }
